gcc/testsuite/g++.old-deja/g++.pt/explicit69.C
// { dg-do assemble  }
template class x {}; // { dg-error "" } not a template instantiation
